--- a/res/layout/fragment_workout_detail.xml
+++ b/res/layout/fragment_workout_detail.xml
@@ -6,7 +6,6 @@
     android:orientation="vertical"
     tools:context="com.hfad.workout.WorkoutDetailFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -22,5 +21,9 @@
         android:text=""
         android:id="@+id/textDescription"
     />
+    <FrameLayout
+        android:id="@+id/stopwatch_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></FrameLayout>
 
 </LinearLayout>
